packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/OriginMetadataType__c.field-meta.xml
<CustomField>
    <fullName>OriginMetadataType__c</fullName>
    <description>Type of origin metadata (ApexClass or ApexTrigger). Extracted from OriginSourceMetadata for filtering and reporting.</description>
    <inlineHelpText>Type of origin metadata (ApexClass or ApexTrigger). Extracted from OriginSourceMetadata for filtering and reporting.</inlineHelpText>
    <label>Origin Metadata Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ApexClass</fullName>
            </value>
            <value>
                <fullName>ApexTrigger</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>