packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/OriginMethodName__c.field-meta.xml
<CustomField>
    <fullName>OriginMethodName__c</fullName>
    <description>The method name where the work item was registered. Extracted from the stack trace origin location.</description>
    <inlineHelpText>The method name where the work item was registered. Extracted from the stack trace origin location.</inlineHelpText>
    <label>Origin Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>