packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/OriginSnippetStartLine__c.field-meta.xml
<CustomField>
    <fullName>OriginSnippetStartLine__c</fullName>
    <description>The starting line number of the source code snippet stored in OriginSourceMetadata. Used to display correct line numbers in the code viewer.</description>
    <inlineHelpText>The starting line number of the source code snippet stored in OriginSourceMetadata. Used to display correct line numbers in the code viewer.</inlineHelpText>
    <label>Origin Snippet Start Line</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>