packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/PlannedCount__c.field-meta.xml
<CustomField>
    <fullName>PlannedCount__c</fullName>
    <description>Number of items planned for the work item at registration time.</description>
    <inlineHelpText>Number of items planned for the work item at registration time.</inlineHelpText>
    <label>Planned Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>