packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/ProcessedCount__c.field-meta.xml
<CustomField>
    <fullName>ProcessedCount__c</fullName>
    <description>Total number of records processed in this work item.</description>
    <inlineHelpText>Total number of records processed in this work item.</inlineHelpText>
    <label>Processed Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>