packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/RecordIdSingle__c.field-meta.xml
<CustomField>
    <fullName>RecordIdSingle__c</fullName>
    <description>Record Id if there was only a single record processed</description>
    <label>Record Id (Single)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>