packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/RequestedAt__c.field-meta.xml
<CustomField>
    <fullName>RequestedAt__c</fullName>
    <description>Timestamp when this work item was registered.</description>
    <inlineHelpText>Timestamp when this work item was registered.</inlineHelpText>
    <label>Requested At</label>
    <type>DateTime</type>
</CustomField>