packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/RequestOrigin__c.field-meta.xml
<CustomField>
    <fullName>RequestOrigin__c</fullName>
    <description>Location where this work item was registered (class and method). Useful for debugging and tracing.</description>
    <inlineHelpText>Location where this work item was registered (class and method). Useful for debugging and tracing.</inlineHelpText>
    <label>Request Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>