packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/RequestStackTrace__c.field-meta.xml
<CustomField>
    <fullName>RequestStackTrace__c</fullName>
    <description>Stack trace captured when this work item was registered.</description>
    <inlineHelpText>Stack trace captured when this work item was registered.</inlineHelpText>
    <label>Request Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>