packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Execution order of this work item within the transaction.</description>
    <inlineHelpText>Execution order of this work item within the transaction.</inlineHelpText>
    <label>Sequence</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>