packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Snapshot__c</fullName>
    <description>JSON snapshot of the work item operation for detailed audit.</description>
    <inlineHelpText>JSON snapshot of the work item operation for detailed audit.</inlineHelpText>
    <label>Snapshot</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>