packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <description>SObject API name for DML operations (e.g., Account, Contact, CustomObject__c).</description>
    <inlineHelpText>SObject API name for DML operations (e.g., Account, Contact, CustomObject__c).</inlineHelpText>
    <label>SObject Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>