packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <description>Timestamp when execution began for this work item.</description>
    <inlineHelpText>Timestamp when execution began for this work item.</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>