packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/SuccessCount__c.field-meta.xml
<CustomField>
    <fullName>SuccessCount__c</fullName>
    <description>Number of records that succeeded in this work item.</description>
    <inlineHelpText>Number of records that succeeded in this work item.</inlineHelpText>
    <label>Success Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>