packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/WorkItemStatus__c.field-meta.xml
<CustomField>
    <fullName>WorkItemStatus__c</fullName>
    <description>Status of this work item execution. Maps to UoWEnums.WorkStatus enum.</description>
    <inlineHelpText>Status of this work item execution. Maps to UoWEnums.WorkStatus enum.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REGISTERED</fullName>
                <color>#747474</color>
                <label>📋 Registered</label>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
                <color>#2E844A</color>
                <label>✅ Success</label>
            </value>
            <value>
                <fullName>PARTIAL_SUCCESS</fullName>
                <color>#DD7A01</color>
                <label>⚠️ Partial Success</label>
            </value>
            <value>
                <fullName>FAILED</fullName>
                <color>#C23934</color>
                <label>❌ Failed</label>
            </value>
            <value>
                <fullName>SKIPPED</fullName>
                <color>#0176D3</color>
                <label>⏭️ Skipped</label>
            </value>
            <value>
                <fullName>NOT_EXECUTED</fullName>
                <color>#B0ADAB</color>
                <label>➖ Not Executed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>