packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/WorkType__c.field-meta.xml
<CustomField>
    <fullName>WorkType__c</fullName>
    <description>Type of work operation (DML, EVENT, FLOW, EMAIL, NOTIFICATION, CALLOUT). Maps to UoWEnums.WorkType enum.</description>
    <inlineHelpText>Type of work operation (DML, EVENT, FLOW, EMAIL, NOTIFICATION, CALLOUT). Maps to UoWEnums.WorkType enum.</inlineHelpText>
    <label>Work Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DML</fullName>
            </value>
            <value>
                <fullName>EVENT</fullName>
                <label>Platform Event</label>
            </value>
            <value>
                <fullName>FLOW</fullName>
                <label>Flow</label>
            </value>
            <value>
                <fullName>EMAIL</fullName>
                <label>Email</label>
            </value>
            <value>
                <fullName>NOTIFICATION</fullName>
                <label>Notification</label>
            </value>
            <value>
                <fullName>CALLOUT</fullName>
                <label>Callout</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>